// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the expected classes when not visitor 1`] = `
.c0 {
  margin-bottom: 0.5rem;
  float: left;
  color: #333;
}

.c1 {
  margin-left: 2.857142857142857rem;
  background: #f3f3f3;
  max-width: 15.642857142857142rem !important;
}

<div>
  <div>
    <div
      class="c0"
    >
      <div
        data-testid="chat-msg-answer-bot"
      >
        <div
          class="messageBubble c1"
        >
          <span
            class="Linkify"
          >
            not a visitor
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the expected classes when visitor 1`] = `
.c0 {
  margin-bottom: 0.5rem;
  float: right;
  color: #fff;
}

.c1 {
  margin-left: 2.857142857142857rem;
  background-color: #1F73B7 !important;
  color: #FFFFFF !important;
}

.c1:hover,
.c1:active,
.c1:focus {
  background-color: #227EC9 !important;
}

<div>
  <div>
    <div
      class="c0"
    >
      <div
        data-testid="chat-msg-user"
      >
        <div
          class="messageBubble c1"
        >
          <span
            class="Linkify"
          >
            a visitor
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
